# ICD-Code-Matching

./: .gitignore  README.markdown  README.md  Training_dataset.csv  admission_discharge_data.csv  db.sqlite3  dump.rdb  locust.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
Templates/: admission_details.html  base.html  patient_input.html  result.html
data/helper_files/: abbreviations.json  exclude_codes.json  locust.py  synonyms.json
data/icd_codes/: icd_version_2019.json
data/temporary_files/: new_icd_scraper.py  old_utils.py
data/training_data/: Training_dataset.csv
icd_10/: icd_version_2019.json
icd_matcher/: admin.py  api.py  apps.py  forms.py  inspect_redis.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
icd_matcher/migrations/: 0001_initial.py  0002_icdcategory_search_vector_and_more.py  0002_medicaladmissiondetails.py  0003_medicaladmissiondetails_predicted_icd_codes.py  0003_remove_icdcategory_icd_matcher_search__51edd6_gin_and_more.py  0004_alter_icdcategory_code_alter_icdcategory_parent.py  0004_alter_medicaladmissiondetails_options_and_more.py  0005_icdcategory_icd_matcher_code_99c8b7_idx.py  0005_remove_icdcategory_icd_matcher_code_b06f23_idx_and_more.py  0006_remove_icdcategory_icd_matcher_code_99c8b7_idx_and_more.py  0007_remove_icdcategory_icd_title_idx_and_more.py
icd_matcher/scripts/: process_icd_data.py
icd_matcher/tests/: test_admin.py  test_models.py  test_rag_kag.py  test_redis.py  test_signals.py  test_tasks.py
icd_matcher/utils/: db_utils.py  embeddings.py  exceptions.py  knowledge_graph.py  rag_kag_pipeline.py  synonyms.py  text_processing.py
icd_matcher_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
