[project]
name = "medwise-project-114"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.2",
    "django>=5.2",
    "django-extensions>=4.1",
    "django-ninja>=1.4.1",
    "fakeredis>=2.28.1",
    "jsonfield>=3.1.0",
    "jwt>=1.3.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tenacity>=9.1.2",
]
