[project]
name = "medwise-project-114"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "circuitbreaker>=2.1.3",
    "community>=1.0.0b1",
    "decouple>=0.0.7",
    "django-redis>=5.4.0",
    "langgraph>=0.4.5",
    "psycopg2>=2.9.10",
    "pymemcache>=4.0.0",
    "python-louvain>=0.16",
    "ratelimit>=2.2.1",
    "spacy>=3.8.4",
    "timeout-decorator>=0.5.0",
]
